# LiquidGen-v0.0.1

./: .eslintrc.json  CONTRIBUTING.md  README.md  SECURITY.md  dev.cmd  index.html  index.jsx  package.json  setup.cmd  static.index.html
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend.yml  frontend.yml
LiquidGen Protocol Demo/: README.md  index.html  index_static.html  serve.cjs
liquidgen/: package.json
liquidgen-app/: .gitignore  LICENSE  README.md  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js
liquidgen-app/.github/workflows/: ci.yml
liquidgen-app/public/: index.html
liquidgen-app/server/: index.js
liquidgen-app/src/: App.tsx  LiquidGenLanding.jsx  LiquidGenLanding.tsx  global.d.ts  index.css
liquidgen-app/src/components/: ErrorBoundary.tsx
liquidgen-app/src/services/: FaucetService.ts
liquidgen-app/src/styles/: globals.css
liquidgen-app/src/utils/: validation.ts
liquidgen-server/: Cargo.toml  README.md
liquidgen-server/src/: main.rs  middleware.rs  rate_limiter.rs
programs/mint_controller/: Cargo.toml  README.md
programs/mint_controller/examples/: derive_pda.rs
programs/mint_controller/src/: lib.rs
src/: main.jsx  styles.css
